[package]

name = "petgraph"
version = "0.6.4"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
"bluss",
"mitchmindtree",
]

description = "Graph data structure library. Provides graph types and graph algorithms."
documentation = "https://docs.rs/petgraph/"
repository = "https://github.com/petgraph/petgraph"

keywords = ["data-structure", "graph", "unionfind", "graph-algorithms"]
categories = ["data-structures"]

rust-version = "1.64"

edition = "2018"

[package.metadata.docs.rs]
features = ["serde-1", "quickcheck"]

[package.metadata.release]
no-dev-version = true

[lib]
bench = false

name = "petgraph"

[profile.release]

[profile.bench]
debug = true

[dependencies]
fixedbitset = { version = "0.4.0", default-features = false }
indexmap = { git = "https://github.com/JustusAdam/indexmap", rev = "db8b21c22a207eb7a1c42950fa655010595bfda4" }
quickcheck = { optional = true, version = "0.8", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
allocative = { git = "https://github.com/JustusAdam/allocative", rev = "f93888c2dc9d9898481242297c14f70792f0eef2", optional = true }

[dev-dependencies]
bincode = "1.3.3"
defmac = "0.2.1"
itertools = { version = "0.11.0", default-features = false }
odds = { version = "0.4.0" }
rand = "0.5.5"

[features]

# feature flags for testing use only
all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap"]
default = ["graphmap", "stable_graph", "matrix_graph"]

generate = [] # For unstable features

graphmap = []
matrix_graph = []
serde-1 = ["serde", "serde_derive"]
stable_graph = []
unstable = ["generate"]

profiling = ["dep:allocative", "indexmap/profiling"]

[workspace]
members = ["serialization-tests"]